# cxx_project_template

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitmodules  CMakeLists.txt  CMakePresets.json
.github/workflows/: base-build.yml
cmake/: options-config.cmake
example/: CMakeLists.txt  example.cxx  example_sdl.cxx
lib/: CMakeLists.txt
src/: CMakeLists.txt  template.cxx  template.cxxm
