find_package(SDL3 GLOBAL)

if(NOT SDL3_FOUND OR TEMPLATE_DEBUG_3RDPARTY)
    set(SDL_STATIC OFF)
    set(SDL_SHARED ON)
    set(SDL_TESTS OFF)
    set(SDL_WAYLAND ON)
    set(SDL_DISABLE_INSTALL ON)
    set(SDL_DYNAPI_PROC)
    add_subdirectory(SDL EXCLUDE_FROM_ALL SYSTEM)
endif()

set(VULKAN_HPP_GENERATOR_BUILD ON)
set(VULKAN_HPP_RUN_GENERATOR ON)
set(VULKAN_HPP_BUILD_CXX_MODULE ON)
add_subdirectory(Vulkan-Hpp EXCLUDE_FROM_ALL SYSTEM)
